--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,63 @@
-version: "3.8"
 services:
-
   nginx:
-    image: nginx
-    build:
-      context: ./nginx
-      dockerfile: ./Dockerfile
+    image: nginx:1.21.6
     container_name: nginx
-    restart: unless-stopped
+    hostname: nginx
     ports:
-    - 80:80
-  
-  client:
-    image: client
+      - 80:80
+    restart: unless-stopped
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    networks:
+      - network
+
+  frontend:
+    image: frontend:1.0.0
     build:
-        context: client
-        dockerfile: ./Dockerfile
-    container_name: client
+      context: frontend
+      dockerfile: ./Dockerfile
+    container_name: frontend
+    hostname: frontend
     restart: unless-stopped
     ports:
       - 3000:3000
+    networks:
+      - network
 
-  api:
-    image: api
+  backend:
+    image: backend:1.0.0
     build:
-        context: api
-        dockerfile: ./Dockerfile
-    container_name: server
+      context: backend
+      dockerfile: ./Dockerfile
+    container_name: backend
+    hostname: backend
     restart: unless-stopped
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
     ports:
       - 3001:3001
+    networks:
+      - network
 
-  mongodb:
-    image: mongo:latest
-    container_name: database
-    restart: unless-stopped
+  database:
+    image: mongo:8.0
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: pZ5FbOZ50GkZ
     ports:
       - 27017:27017
+    container_name: database
+    hostname: database
+    restart: unless-stopped
     volumes:
       - mongodb:/data/db
+    networks:
+      - network
 
 volumes:
   mongodb:
     driver: local
+
+networks:
+  network:
+    driver: bridge
