--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL = "http://localhost/api/todo"
+# VITE_API_BASE_URL = "http://localhost/api/todo"
+VITE_API_BASE_URL = "http://ytsm-test-1.bilecik.edu.tr/api/todo"
