--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,1 @@
-# VITE_API_BASE_URL = "http://localhost/api/todo"
-VITE_API_BASE_URL = "http://ytsm-test-1.bilecik.edu.tr/api/todo"
+VITE_API_BASE_URL = "http://localhost/api/todo"
